@@ -1,3 +1,9 @@
+2007-01-02 Jens Tkotz <jens@peino.de> 1.5.6-svn-b2
+
+ * Fix: When Comments are globally deactivated, but a user has
+	    the right to add a comment, the global deactivation didnt
+	    work and a user can bypass this.
+
 2006-12-18 Jens Tkotz <jens@peino.de> 1.5.6-svn-b1
 
  * Fix: Bug #1608264
